--- a/polycalculator/pubspec.yaml
+++ b/polycalculator/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  screenshot: ^3.0.0
+  path_provider: ^2.0.13
+  permission_handler: ^11.3.1
+  image_gallery_saver: ^2.0.3
+
+
 
 dev_dependencies:
   flutter_test:
